--- a/GidroAtlas.Web/Components/Layout/NavMenu.razor
+++ b/GidroAtlas.Web/Components/Layout/NavMenu.razor
@@ -1,8 +1,7 @@
 ﻿@inject IJSRuntime JS
 
 <MudNavMenu>
-    <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Главная Страница</MudNavLink>
-    <MudNavLink Href="Map" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Карта</MudNavLink>
+    <MudNavLink Href="Map" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Map">Карта</MudNavLink>
     @if (isAdmin)
     {
         <MudNavLink Href="dashboard" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.People" IconColor="Color.Success">Дашборд</MudNavLink>
