--- a/GidroAtlas.Web/wwwroot/app.css
+++ b/GidroAtlas.Web/wwwroot/app.css
@@ -20,9 +20,9 @@ h1:focus {
     color: white;
 }
 
-    .blazor-error-boundary::after {
-        content: "An error has occurred."
-    }
+.blazor-error-boundary::after {
+    content: "An error has occurred."
+}
 
 .darker-border-checkbox.form-check-input {
     border-color: #929292;
@@ -48,8 +48,8 @@ h1:focus {
 }
 
 .chat-toggle-btn.active {
-    background: rgba(126, 111, 255, 0.2) !important;
-    color: #7e6fff !important;
+    background: rgba(19, 127, 236, 0.2) !important;
+    color: #137fec !important;
 }
 
 .chat-toggle-btn:hover {
