--- a/GidroAtlas.Web/Components/Layout/NavMenu.razor
+++ b/GidroAtlas.Web/Components/Layout/NavMenu.razor
@@ -1,11 +1,11 @@
 ﻿@inject IJSRuntime JS
 
 <MudNavMenu>
-    <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Главная Страница</MudNavLink>
-    <MudNavLink Href="Map" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Карта</MudNavLink>
+    <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Главная</MudNavLink>
+    <MudNavLink Href="Map" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Map">Карта</MudNavLink>
     @if (isAdmin)
     {
-        <MudNavLink Href="dashboard" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.People" IconColor="Color.Success">Дашборд</MudNavLink>
+        <MudNavLink Href="dashboard" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Dashboard" IconColor="Color.Primary">Дашборд</MudNavLink>
     }
 </MudNavMenu>
 
